src/tests/parse_errors/021.ura
// parse_errors/021 — function call missing closing `)`
use "@/header"

fn add(a int, b int) int:
    return a + b

main():
    x int = add(1, 2